# k8s-sidecar

./: Dockerfile  Dockerfile.armv7  README.md  docker-bake.hcl  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build_and_test.yaml  codeql.yaml  release.yaml  release_test.yaml
src/: healthz.py  helpers.py  requirements.txt  resources.py
test/resources/: sidecar.yaml
