[project]
name = "k8s-sidecar"
version = "1.0.0" # Placeholder, actual version is managed by github-tag-action
description = "Kubernetes sidecar to watch for changes in resources and mount them as files."
requires-python = ">=3.12"
dependencies = [
    "kubernetes==32.0.1",
    "requests==2.33.1",
    "python-json-logger==4.1.0",
    "logfmter==0.0.12",
    "argparse==1.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
src = ["src/requests", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "T10",    # flake8-debugger (replaces debug-statements hook)
]